fixed issue with shadow being cut off on right side of jump menu

--- a/styl/sidebar.styl
+++ b/styl/sidebar.styl
@@ -15,7 +15,7 @@
 		background-color color-black
 		box-shadow 1px 0 2px 1px rgba(0,0,0,0.3)
 		@media all and (min-width: screen-sizes['md'])
-			right 26px
+			right: (2 * padding-sizes['md'])
 			
 			// Workaround for IE to fill height of a table cell
 			padding-bottom 50000px
